Client Lourd/Sources/DLL/Interface/FacadeInterfaceNative.h

	__declspec(dllexport) void animer(double temps);
	__declspec(dllexport) int obtenirTouchePDJ1();
	__declspec(dllexport) int obtenirTouchePDJ2();
	__declspec(dllexport) int obtenirToucheRessort();
	__declspec(dllexport) void activerAI(bool actif, int joueur = 2);
	__declspec(dllexport) void SendChatMessage(const char* lobbyName, const char* chatMessage);
	__declspec(dllexport) char* GetLobbies();
	__declspec(dllexport) char* GetMessages(char* lobbyName);
	__declspec(dllexport) char* GetAllMessages(char* lobbyName);
	__declspec(dllexport) bool GetChatHistoryUpdates();
	__declspec(dllexport) bool LogIn(char* username, char* password);
	__declspec(dllexport) bool LogOff();
	__declspec(dllexport) bool DisconnectFromServer();
	__declspec(dllexport) bool CreateAccount(char* username, char* password, char* email);
	__declspec(dllexport) bool SendIP(char* ipAddress);
	__declspec(dllexport) char* obtenirInfoCompte();
	__declspec(dllexport) bool updateInfoCompte(char* info);
	__declspec(dllexport) bool requestPasswordRecovery(char* userName);
	__declspec(dllexport) void setPlayerLost();
	__declspec(dllexport) void asHostSetPlayerLost(int index);
	__declspec(dllexport) void asHostSetPlayerWin(int index);
	__declspec(dllexport) void addShekels(unsigned int shekels);
	__declspec(dllexport) void addAchievementPoints(unsigned int achPoints);
	__declspec(dllexport) void prepareNextGame();
	__declspec(dllexport) int getCurrentGameIndex();
	__declspec(dllexport) void executeUploadMaps();
	__declspec(dllexport) void executeDownloadMaps();
	__declspec(dllexport) bool isOnlineAccount();
	__declspec(dllexport) bool isCompetitiveGame();
	__declspec(dllexport) char* getUserName();
	__declspec(dllexport) char* obtenirBonus();
	__declspec(dllexport) char* obtenirMalus();
	__declspec(dllexport) bool cameraEstOrbite();
	__declspec(dllexport) void utiliserCameraOrbite(bool utiliseOrbite);
	__declspec(dllexport) void activerPalettesGauches(int colorshift);
	__declspec(dllexport) void desactiverPalettesGauches(int colorshift);
	__declspec(dllexport) void activerPalettesDroites(int colorshift);
	__declspec(dllexport) void desactiverPalettesDroites(int colorshift);
	__declspec(dllexport) void compresserRessort(int colorshift);
	__declspec(dllexport) void relacherRessort(int colorshift);
	__declspec(dllexport) void animerJeu(bool animer);
	__declspec(dllexport) int obtenirNombreDePointsDePartie(int colorshift = 0);
	__declspec(dllexport) void resetNombreDePointsDePartie();
	__declspec(dllexport) int  obtenirNombreBillesCourante(int colorshift = 0);
	__declspec(dllexport) int obtenirModeDoubleBille();
	__declspec(dllexport) int obtenirNombreDeBilles();
	__declspec(dllexport) void resetNombreBillesCourantes();
	__declspec(dllexport) void rectangleElastique(int i, int j);
	__declspec(dllexport) void initialiserRectangleElastique(int i, int j);
	__declspec(dllexport) void terminerRectangleElastique();
	__declspec(dllexport) bool createGame(char* mapName, char* password, bool instaDeath, int gameTime, int gameType);
	__declspec(dllexport) bool startGame();
	__declspec(dllexport) char* GetAvailableGames();
	__declspec(dllexport) bool joinGame(char * hostName, char* mapName, char* password);
	__declspec(dllexport) bool leaveGame();
	__declspec(dllexport) int matchmaking();
	__declspec(dllexport) char* GetGameInfo();
	__declspec(dllexport) bool playerIsReady(bool playerReady);
	__declspec(dllexport) char* GetPlayersInfo();
	__declspec(dllexport) char* GetGameState();
	__declspec(dllexport) bool isGameStarted();
	__declspec(dllexport) void resetMultiplayer();
	__declspec(dllexport) int obtenirNumeroJoueur();
	__declspec(dllexport) void fonctionTest();
	__declspec(dllexport) void obligerTransparence(bool transparence);